ssa acou: clean up test

--- a/examples/seismic/tutorials/09_viscoelastic.ipynb
+++ b/examples/seismic/tutorials/09_viscoelastic.ipynb
@@ -130,7 +130,7 @@
     "# Thorbecke's parameter notation\n",
     "l = model.lam\n",
     "mu = model.mu\n",
-    "ro = model.irho\n",
+    "ro = model.b\n",
     "\n",
     "k = 1.0/(l + 2*mu)\n",
     "pi = l + 2*mu\n",
