--- a/examples/seismic/tutorials/11_viscoacoustic.ipynb
+++ b/examples/seismic/tutorials/11_viscoacoustic.ipynb
@@ -246,8 +246,8 @@
    "outputs": [],
    "source": [
     "f0 = 0.005 # peak/dominant frequency \n",
-    "irho = model.irho\n",
-    "rho = 1./irho\n",
+    "b = model.b\n",
+    "rho = 1./b\n",
     "\n",
     "# velocity model\n",
     "vp = model.vp\n",
@@ -404,7 +404,7 @@
     "    bm = rho * (vp * vp)\n",
     "\n",
     "    # Define PDE to v\n",
-    "    pde_v = v - s * irho * grad(p)\n",
+    "    pde_v = v - s * b * grad(p)\n",
     "    u_v = Eq(v.forward, damp * pde_v)    \n",
     "\n",
     "    # Define PDE to r\n",
@@ -577,12 +577,12 @@
     "    w = 2. * np.pi * f0\n",
     "\n",
     "    # Define PDE to v\n",
-    "    pde_v = v - s * irho * grad(p)\n",
+    "    pde_v = v - s * b * grad(p)\n",
     "    u_v = Eq(v.forward, damp * pde_v)\n",
     "\n",
     "    # Define PDE to p\n",
     "    pde_p = p - s * vp * vp * rho * div(v.forward) + s * \\\n",
-    "            ((vp * vp * rho) / (w * model.qp)) * div(irho * grad(p))\n",
+    "            ((vp * vp * rho) / (w * model.qp)) * div(b * grad(p))\n",
     "\n",
     "    u_p = Eq(p.forward, damp * pde_p) \n",
     "    \n",
@@ -744,7 +744,7 @@
     "    w = 2. * np.pi * f0\n",
     "\n",
     "    # Define PDE to v\n",
-    "    pde_v = v - s * irho * grad(p)\n",
+    "    pde_v = v - s * b * grad(p)\n",
     "    u_v = Eq(v.forward, damp * pde_v)\n",
     "\n",
     "    # Define PDE to p\n",
