--- a/examples/userapi/03_subdomains.ipynb
+++ b/examples/userapi/03_subdomains.ipynb
@@ -783,7 +783,7 @@
     "# Thorbecke's parameter notation\n",
     "l = model.lam\n",
     "mu = model.mu\n",
-    "ro = model.irho\n",
+    "ro = model.b\n",
     "\n",
     "t0, tn = 0., 30.\n",
     "dt = model.critical_dt\n",
